# tidypath

./: .gitignore  LICENSE  Makefile.am  README.md  bootstrap  compat.c  compat.h  configure.ac  main.c  prep_build.bash  screwdriver.yaml  tidypath.c  tidypath.h
src/: main.c  tidypath.c  tidypath.h
src/compat/: strchrnul.c  strchrnul.h
test/: basic.test  missing_env.test  nop.test
